--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
         <h1>Registra Intervento</h1>
         <form id="form-intervento">
             <select name="cliente_id" id="cliente_id" required>
-                <option value="">Seleziona Cliente</option>
+                <option value="">-- Seleziona Cliente --</option>
             </select>
             <input type="text" name="tipo_servizio" placeholder="Tipo Servizio" required>
             <input type="number" step="0.1" name="ore_utilizzate" placeholder="Ore Utilizzate" required>
