feat: Add functionality to restore remaining hours for all clients with confirmation

--- a/views/index.html
+++ b/views/index.html
@@ -45,11 +45,15 @@
                 <tbody></tbody>
             </table>
         </div>
-        
+
         <br>
 
         <button onclick="confermaEliminazioneTotale()" style="margin-bottom: 1rem;" class="btn-danger">
             Elimina Tutti i Dati
+        </button>
+
+        <button onclick="RipstinaPunteggitutti()" style="margin-bottom: 1rem;" class="btn-danger">
+            Riprstina tutte le ore per tutti i clienti
         </button>
     </div>
 </body>
