feat: Enhance client management interface with utilized hours and improved alerts

--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
         </form>
 
         <div class="table-container">
-            <h1>Lista Clienti & Ore Residue</h1>
+            <h1>Lista Clienti & Ore</h1>
             <table id="tabella-clienti">
                 <thead>
                     <tr>
@@ -38,6 +38,7 @@
                         <th>Indirizzo</th>
                         <th>Email</th>
                         <th>Ore Acquistate</th>
+                        <th>Ore Utilizzate</th>
                         <th>Ore Residue</th>
                         <th>Azioni</th>
                     </tr>
@@ -53,7 +54,7 @@
         </button>
 
         <button onclick="RipstinaPunteggitutti()" style="margin-bottom: 1rem;" class="btn-danger">
-            Riprstina tutte le ore per tutti i clienti
+            Ripristina tutte le ore per tutti i clienti
         </button>
     </div>
 </body>
