--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Gestione Ore Clienti</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="/script.js" defer></script>
+    <link rel="stylesheet" href="/CSS/style.css">
+    <script src="/JS/script.js" defer></script>
 </head>
 
 <body>
