--- a/views/index.html
+++ b/views/index.html
@@ -47,6 +47,7 @@
                         <th>Ore Acquistate</th>
                         <th>Ore Utilizzate</th>
                         <th>Ore Residue</th>
+                        <th>Stato</th>
                         <th>Azioni</th>
                     </tr>
                 </thead>
