--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Gestione Ore Clienti</title>
     <link rel="stylesheet" href="/CSS/style.css">
-    <script src="/JS/script.js" defer></script>
+    <script src="/JS/script_Frot.js" defer></script>
 </head>
 
 <body>
