--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,7 @@
             <div class="nav-brand">
                 <h2>Sistema Assistenza</h2>
             </div>
+        </div>
     </nav>
 
     <!-- Main Content -->
