--- a/views/report.html
+++ b/views/report.html
@@ -136,8 +136,9 @@
                     <input type="number" id="edit-ore-utilizzate" step="0.1" min="0.1" required>
                 </div>
                 <div class="modal-actions">
-                    <button type="submit" class="btn btn-primary">Salva</button>
-                    <button type="button" onclick="hideEditModal()" class="btn btn-secondary">Annulla</button>
+                    <button type="submit" class="btn btn-primary" id="save-btn" onclick="Salva()">Salva</button>
+
+                    <button type=" button" onclick="hideEditModal()" class="btn btn-secondary">Annulla</button>
                 </div>
             </form>
         </div>
