refactor: Enhance client status indicators and update logic in main.js and report.js

--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -676,3 +676,50 @@ body {
 td{
   text-align: center !important;
 }
+
+.status-success {
+    background-color: #28a745; /* verde */
+}
+
+.status-warning {
+    background-color: #ffc107; /* arancione */
+}
+
+.status-light-danger {
+    background-color: #f88a8a; /* rosso chiaro */
+}
+
+.status-danger {
+    background-color: #dc3545; /* rosso */
+}
+
+.status-indicator {
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+}
+.status-indicator {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+/* Colori */
+.status-success {
+    background-color: green; /* Verde */
+}
+
+.status-warning {
+    background-color: #ffc107; /* Arancione */
+}
+
+.status-light-danger {
+    background-color: #f88a8a; /* Rosso chiaro */
+}
+
+.status-danger {
+    background-color: #dc3545; /* Rosso intenso */
+}
