--- a/views/index.html
+++ b/views/index.html
@@ -97,6 +97,7 @@
                                     <th>Ore Acquistate</th>
                                     <th>Ore Utilizzate</th>
                                     <th>Ore Residue</th>
+                                    <th>Percentuale Utilizzata</th>
                                     <th>Stato</th>
                                     <th>Azioni</th>
                                 </tr>
