add ragione sociale title

--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://www.lucasechi.it/wp-content/uploads/gestione-cliente-1.png" type="image/png">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <h2>Assistenza</h2>
+                <h2>Gestione Ore Cllienti - Assistenza</h2>
             </div>
         </div>
     </nav>
