--- a/views/report.html
+++ b/views/report.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Report Cliente - Assistenza</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/report.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://www.lucasechi.it/wp-content/uploads/gestione-cliente-1.png" type="image/png">
 </head>
 
 <body>
