toccando su nome ritorni alla home nei report

--- a/views/report.html
+++ b/views/report.html
@@ -18,7 +18,9 @@
     <nav class="navbar no-print">
         <div class="nav-container">
             <div class="nav-brand">
-                <h2 id="client-name-navbar">Assistenza</h2>
+                <a href="/">
+                    <h2 id="client-name-navbar"></h2>
+                </a>
             </div>
 
             <!-- Hamburger (solo mobile) -->
