--- a/views/report.html
+++ b/views/report.html
@@ -85,7 +85,9 @@
                     </div>
                     <div class="progress-labels">
                         <span>0%</span>
+                        <span>25%</span>
                         <span>50%</span>
+                        <span>75%</span>
                         <span>100%</span>
                     </div>
                 </div>
