--- a/public/CSS/report.css
+++ b/public/CSS/report.css
@@ -644,3 +644,7 @@ td,
 th {
   text-align: center !important;
 }
+
+.nav-brand a {
+  text-decoration: none; /* Rimuove underline in stato normale */
+}
