--- a/views/report.html
+++ b/views/report.html
@@ -102,6 +102,10 @@
                             <span>Totale interventi: <strong id="total-interventions">0</strong></span>
                         </div>
                     </div>
+                    <div class="search-interventi-group">
+                        <label for="search-interventi" class="search-label">Cerca intervento per nome</label>
+                        <input type="text" id="search-interventi" class="input-search" placeholder="Cerca intervento..." autocomplete="off">
+                    </div>
                     <div class="table-container">
                         <table id="tabella-interventi" class="interventions-table">
                             <thead>
