--- a/views/index.html
+++ b/views/index.html
@@ -61,9 +61,11 @@
                         <div class="form-group combo-search-group">
                             <label for="combo-clienti">Seleziona Cliente</label>
                             <div class="combo-custom" id="combo-clienti-box">
-                                <input type="text" id="combo-clienti-input" class="combo-input" placeholder="Seleziona cliente..." readonly autocomplete="off">
+                                <input type="text" id="combo-clienti-input" class="combo-input"
+                                    placeholder="Seleziona cliente..." readonly autocomplete="off">
                                 <div class="combo-dropdown" id="combo-clienti-dropdown">
-                                    <input type="text" id="combo-clienti-search" class="combo-dropdown-search" placeholder="Cerca cliente..." autocomplete="off">
+                                    <input type="text" id="combo-clienti-search" class="combo-dropdown-search"
+                                        placeholder="Cerca cliente..." autocomplete="off">
                                     <ul id="combo-clienti-list" class="combo-dropdown-list"></ul>
                                 </div>
                             </div>
@@ -88,8 +90,8 @@
                 <div class="table-card">
                     <div class="table-header">
                         <h2 class="table-title">Lista Clienti & Ore</h2>
-                        <input type="text" id="search-utenti" class="input-search-table" placeholder="Cerca utente..." autocomplete="off">
-                        <input type="text" id="search-lista-clienti" class="input-search-table" placeholder="Cerca nella lista clienti..." autocomplete="off">
+                        <input type="text" id="search-utenti" class="input-search-table" placeholder="Cerca utente..."
+                            autocomplete="off">
                         <button onclick="confermaEliminazioneTotale()" class="btn btn-danger">
                             Elimina Tutti i Clienti
                         </button>
