--- a/views/index.html
+++ b/views/index.html
@@ -59,7 +59,7 @@
                     <h2 class="form-title">Registra Intervento</h2>
                     <form id="form-intervento" class="form">
                         <div class="form-group combo-search-group">
-                            <label for="combo-clienti">Seleziona Cliente</label>
+                            <label for="combo-clienti">-- Seleziona Cliente --</label>
                             <div class="combo-custom" id="combo-clienti-box">
                                 <input type="text" id="combo-clienti-input" class="combo-input"
                                     placeholder="Seleziona cliente..." readonly autocomplete="off">
